[SNI] Handle NewMenu signal

Qt uses NewMenu signal to notify when new context menu is set.
It is not part of the official standard but already used by Qt
(starting from Qt 5.11).

BUG: 383202
FIXED-IN: 5.22.0